fix: keep web loader visible on large screens

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -375,8 +375,9 @@ body {
     display: flex;
     margin-top: var(--loader-margin-top);
     justify-content: center;
+    top: 70%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     box-shadow: 0px 40px 60px -20px rgba(0, 0, 0, 0.2);
 }
 
